--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>3.1.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.18.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
