--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,9 @@ spring.datasource.password=password
 #spring.datasource.url=jdbc:postgresql://containers-us-west-91.railway.app:5588/railway
 #spring.datasource.password=ywjewYDFDhr69cg46IEy
 
-
+#web
+getSeatByScheduleIdAndNomorKursi=http://localhost:9004/seat/by-schedule-id-and-nomor-kursi?scheduleId=
+delSeatByScheduleIdAndNomorKursi=http://localhost:9004/seat/by-schedule-id-and-nomor-kursi?scheduleId=
+getUserByUsername=http://localhost:9001/user?username=
+getFilmByFilmName=http://localhost:9002/film/by-film-name/
+getScheduleByAll=http://localhost:9003/schedule/by-all/?jamMulai=
